--- a/getWorkDone2/app/src/main/AndroidManifest.xml
+++ b/getWorkDone2/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"
-            android:theme="@style/Base.Theme.AppCompat.Light"></activity>
+        <activity android:name=".PostActivity"></activity>
+        <activity
+            android:name=".HomeActivity"
+            android:theme="@style/Base.Theme.AppCompat.Light" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".SplashScreen">
             <intent-filter>
